# performance-calc

./: .gitignore  Cargo.toml  Makefile  README.md
app/: Cargo.toml
app/src/: data.rs  lib.rs  wind.rs
public/: index.html  index.js
server/: Cargo.toml
server/src/: main.rs
www/: index.js  package-lock.json  package.json
